--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "aro-io",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://alejandroweb.github.io",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint . --ext .ts,.tsx,.js --cache",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build -b master -o upstream",
     "eject": "react-scripts eject"
   },
   "browserslist": {
@@ -22,16 +25,26 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "4.6.1",
+    "@material-ui/icons": "4.5.1",
+    "add": "2.0.6",
+    "include-media": "1.4.9",
+    "phaser": "3.20.1",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "soundcloud-audio": "1.4.0",
+    "webfontloader": "1.6.28",
+    "yarn": "1.19.1"
   },
   "devDependencies": {
     "@types/jest": "24.0.23",
     "@types/node": "12.12.8",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "@types/webfontloader": "1.6.29",
     "eslint-config-prettier": "6.6.0",
     "eslint-plugin-prettier": "3.1.1",
+    "gh-pages": "2.1.1",
     "node-sass": "4.13.0",
     "prettier": "1.19.1",
     "react-scripts": "3.2.0",
